--- a/01-gallery.html
+++ b/01-gallery.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/common.css" />
   <link rel="stylesheet" href="css/styles.css" />
 
-    <!-- Styles Modal Window -->
+  <!-- Styles бібліотека basiclightbox (Modal Window) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
 
 </head>
@@ -21,7 +21,7 @@
   <!-- Add gallery items to this list -->
   <ul class="gallery"></ul>
 
-  <!-- Script Modal Window -->
+  <!-- Script бібліотека basiclightbox (Modal Window) -->
   <script src="
     https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
     "></script>
